# pymcu-arm

./: .gitignore  Directory.Build.props  README.md  hatch_build.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/blink/: pyproject.toml
examples/blink/src/: main.py
examples/cp-digitalio-uart/: pyproject.toml
examples/cp-digitalio-uart/src/: main.py
examples/mp-uart-echo/: pyproject.toml
examples/mp-uart-echo/src/: main.py
examples/uart-echo/: pyproject.toml
examples/uart-echo/src/: main.py
src/csharp/cli/: Program.cs  PyMCU.Backend.ARM.Cli.csproj  PyMCU.Backend.RP2040.Cli.csproj
src/csharp/lib/: PyMCU.Backend.ARM.csproj  PyMCU.Backend.RP2040.csproj  Rp2040BackendProvider.cs
src/csharp/lib/Targets/RP2040/: Rp2040LlvmCodeGen.cs
src/python/pymcu/backend/rp2040/: __init__.py  plugin.py
src/python/pymcu/programmer/rp2040/: __init__.py  picotool.py
src/python/pymcu/toolchain/rp2040/: __init__.py  llvm.py  plugin.py
src/runtime/: boot2.S  crt0.S  rp2040.ld
tests/integration/: PyMCU.IntegrationTests.csproj  PymcuCompiler.cs
tests/integration/Tests/RP2040/: BlinkTests.cs  CpDigitalioUartTests.cs  MpUartEchoTests.cs  UartEchoTests.cs
