[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "pymcu-arm"
version = "0.1.0a1"
description = "ARM (Cortex-M) support for pymcu-compiler: LLVM-IR codegen backend + LLVM toolchain driver"
readme = "README.md"
authors = [
    { name = "Iván Montiel Cardona", email = "contact@pymcu.org" }
]
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "pymcu-sdk>=0.1.0a1",
    # The vendored LLVM toolchain lives in its own repository
    # (~/Repos/pymcu-arm-toolchain, published to PyPI as
    # pymcu-arm-toolchain, analogous to avr-gcc-build -> pymcu-avr-toolchain).
    # It bundles opt/llc/llvm-mc/ld.lld/llvm-objcopy and Rp2040LlvmToolchain
    # prefers it via `import pymcu_arm_toolchain`. Until the wheel is on PyPI
    # the driver falls back to a system LLVM on PATH (e.g. `brew install llvm
    # lld`). Once published, add the gated dependency so the arm extra is
    # self-contained:
    #   "pymcu-arm-toolchain>=19.1.7; (sys_platform == 'linux' and platform_machine == 'x86_64') or (sys_platform == 'win32' and platform_machine == 'AMD64') or (sys_platform == 'darwin' and platform_machine == 'arm64')",
]

[project.entry-points."pymcu.backends"]
rp2040 = "pymcu.backend.rp2040:Rp2040BackendPlugin"

[project.entry-points."pymcu.toolchains"]
rp2040 = "pymcu.toolchain.rp2040:Rp2040ToolchainPlugin"

[tool.uv.sources]
pymcu-sdk = {git = "https://github.com/PyMCU/pymcu", subdirectory = "extensions/pymcu-sdk"}


[project.urls]
Homepage = "https://github.com/PyMCU/pymcu-arm"
Repository = "https://github.com/PyMCU/pymcu-arm"
"Bug Tracker" = "https://github.com/PyMCU/pymcu-arm/issues"

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.wheel]
packages = ["src/python/pymcu"]
artifacts = ["src/python/pymcu/backend/rp2040/pymcuc-arm*"]
