[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "pymcu-arm"
version = "0.1.0a1.post1"
description = "ARM (Cortex-M) support for pymcu-compiler: LLVM-IR codegen backend + LLVM toolchain driver"
readme = "README.md"
authors = [
    { name = "Iván Montiel Cardona", email = "contact@pymcu.org" }
]
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "pymcu-sdk>=0.1.0a1",
    "pymcu-arm-toolchain>=22.1.7; (sys_platform == 'linux' and platform_machine == 'x86_64') or (sys_platform == 'linux' and platform_machine == 'aarch64') or (sys_platform == 'win32' and platform_machine == 'AMD64') or (sys_platform == 'darwin' and platform_machine == 'arm64')",
]

[project.entry-points."pymcu.backends"]
rp2040 = "pymcu.backend.rp2040:Rp2040BackendPlugin"

[project.entry-points."pymcu.toolchains"]
rp2040 = "pymcu.toolchain.rp2040:Rp2040ToolchainPlugin"

[project.entry-points."pymcu.programmers"]
rp2040 = "pymcu.programmer.rp2040:Rp2040Programmer"

[tool.uv.sources]
pymcu-sdk = {git = "https://github.com/PyMCU/pymcu", subdirectory = "extensions/pymcu-sdk"}


[project.urls]
Homepage = "https://github.com/PyMCU/pymcu-arm"
Repository = "https://github.com/PyMCU/pymcu-arm"
"Bug Tracker" = "https://github.com/PyMCU/pymcu-arm/issues"

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.wheel]
packages = ["src/python/pymcu"]
artifacts = ["src/python/pymcu/backend/rp2040/pymcuc-arm*"]
